[gd_scene load_steps=7 format=2]

[ext_resource path="res://utils/utilBackBufferCopy.gd" type="Script" id=1]
[ext_resource path="res://manager/scrManager.gd" type="Script" id=2]
[ext_resource path="res://manager/shrGrain.gdshader" type="Shader" id=3]
[ext_resource path="res://themes/thMenu.tres" type="Theme" id=4]

[sub_resource type="Animation" id=1]
resource_name = "anmFade"
tracks/0/type = "value"
tracks/0/path = NodePath("cr:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cr:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/colored = false
shader_param/color_amount = 0.6
shader_param/grain_amount = 0.025
shader_param/grain_size = 1.6
shader_param/lum_amount = 1.6

[node name="manager" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 7
visible = false

[node name="cr" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.65 )

[node name="centercon" type="CenterContainer" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="vbcon" type="VBoxContainer" parent="PauseMenu/centercon"]
margin_left = 216.0
margin_top = 128.0
margin_right = 295.0
margin_bottom = 172.0

[node name="btnResume" type="Button" parent="PauseMenu/centercon/vbcon"]
margin_right = 79.0
margin_bottom = 8.0
mouse_default_cursor_shape = 2
custom_constants/hseparation = 6
text = "Resume"

[node name="btnSettings" type="Button" parent="PauseMenu/centercon/vbcon"]
margin_top = 12.0
margin_right = 79.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Settings"

[node name="btnExitMenu" type="Button" parent="PauseMenu/centercon/vbcon"]
margin_top = 24.0
margin_right = 79.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
text = "Exit to Menu"

[node name="btnExitOS" type="Button" parent="PauseMenu/centercon/vbcon"]
margin_top = 36.0
margin_right = 79.0
margin_bottom = 44.0
mouse_default_cursor_shape = 2
text = "Exit to OS"

[node name="SettingsMenu" type="CanvasLayer" parent="."]
layer = 8
visible = false

[node name="cr" type="ColorRect" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.5 )

[node name="centercon" type="CenterContainer" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="vbcon" type="VBoxContainer" parent="SettingsMenu/centercon"]
margin_left = 171.0
margin_top = 91.0
margin_right = 340.0
margin_bottom = 209.0
custom_constants/separation = 6

[node name="vsync" type="HBoxContainer" parent="SettingsMenu/centercon/vbcon"]
margin_right = 169.0
margin_bottom = 16.0

[node name="txt" type="Label" parent="SettingsMenu/centercon/vbcon/vsync"]
margin_top = 4.0
margin_right = 42.0
margin_bottom = 12.0
text = "Vsync:"

[node name="chkbtnVsync" type="CheckBox" parent="SettingsMenu/centercon/vbcon/vsync"]
margin_left = 46.0
margin_right = 62.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2

[node name="fullscr" type="HBoxContainer" parent="SettingsMenu/centercon/vbcon"]
margin_top = 22.0
margin_right = 169.0
margin_bottom = 38.0

[node name="txt" type="Label" parent="SettingsMenu/centercon/vbcon/fullscr"]
margin_top = 4.0
margin_right = 76.0
margin_bottom = 12.0
text = "Fullscreen:"

[node name="chkbtnFullscr" type="CheckBox" parent="SettingsMenu/centercon/vbcon/fullscr"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2

[node name="pp" type="HBoxContainer" parent="SettingsMenu/centercon/vbcon"]
margin_top = 44.0
margin_right = 169.0
margin_bottom = 60.0

[node name="txt" type="Label" parent="SettingsMenu/centercon/vbcon/pp"]
margin_top = 4.0
margin_right = 110.0
margin_bottom = 12.0
text = "Post Processing:"

[node name="chkbtnPP" type="CheckBox" parent="SettingsMenu/centercon/vbcon/pp"]
margin_left = 114.0
margin_right = 130.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2

[node name="mus" type="HBoxContainer" parent="SettingsMenu/centercon/vbcon"]
margin_top = 66.0
margin_right = 169.0
margin_bottom = 74.0

[node name="txt" type="Label" parent="SettingsMenu/centercon/vbcon/mus"]
margin_right = 90.0
margin_bottom = 8.0
text = "Music Volume:"

[node name="hsldMus" type="HSlider" parent="SettingsMenu/centercon/vbcon/mus"]
margin_left = 94.0
margin_right = 169.0
margin_bottom = 8.0
rect_min_size = Vector2( 75, 0 )
mouse_default_cursor_shape = 6
max_value = 1.0
step = 0.1
value = 1.0

[node name="hsep1" type="HSeparator" parent="SettingsMenu/centercon/vbcon"]
margin_top = 80.0
margin_right = 169.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="sfx" type="HBoxContainer" parent="SettingsMenu/centercon/vbcon"]
margin_top = 86.0
margin_right = 169.0
margin_bottom = 94.0

[node name="txt" type="Label" parent="SettingsMenu/centercon/vbcon/sfx"]
margin_right = 75.0
margin_bottom = 8.0
text = "SFX Volume:"

[node name="hsldSfx" type="HSlider" parent="SettingsMenu/centercon/vbcon/sfx"]
margin_left = 79.0
margin_right = 154.0
margin_bottom = 8.0
rect_min_size = Vector2( 75, 0 )
mouse_default_cursor_shape = 6
max_value = 1.0
step = 0.1
value = 1.0

[node name="hsep2" type="HSeparator" parent="SettingsMenu/centercon/vbcon"]
margin_top = 100.0
margin_right = 169.0
margin_bottom = 104.0

[node name="actions" type="HBoxContainer" parent="SettingsMenu/centercon/vbcon"]
margin_top = 110.0
margin_right = 169.0
margin_bottom = 118.0

[node name="btnDone" type="Button" parent="SettingsMenu/centercon/vbcon/actions"]
margin_right = 48.0
margin_bottom = 8.0
mouse_default_cursor_shape = 2
text = "Go Back"

[node name="vsep" type="VSeparator" parent="SettingsMenu/centercon/vbcon/actions"]
margin_left = 52.0
margin_right = 64.0
margin_bottom = 8.0
custom_constants/separation = 12

[node name="btnApply" type="Button" parent="SettingsMenu/centercon/vbcon/actions"]
margin_left = 68.0
margin_right = 103.0
margin_bottom = 8.0
mouse_default_cursor_shape = 2
text = "Apply"

[node name="Transitions" type="CanvasLayer" parent="."]
layer = 9

[node name="cr" type="ColorRect" parent="Transitions"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="anm" type="AnimationPlayer" parent="Transitions"]
anims/anmFade = SubResource( 1 )

[node name="PostProcessing" type="CanvasLayer" parent="."]
layer = 10

[node name="bbcGrain" type="BackBufferCopy" parent="PostProcessing"]
position = Vector2( 180, 180 )
scale = Vector2( 1.8, 1.8 )
copy_mode = 2
script = ExtResource( 1 )

[node name="fx" type="ColorRect" parent="PostProcessing/bbcGrain"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = -100.0
margin_bottom = -100.0
mouse_filter = 2

[node name="Debug" type="CanvasLayer" parent="."]
layer = 11
visible = false

[node name="txtInfo" type="Label" parent="Debug"]
margin_right = 39.0
margin_bottom = 8.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.431373, 1, 0, 1 )
text = "0x0000"

[connection signal="pressed" from="PauseMenu/centercon/vbcon/btnResume" to="." method="_on_btnResume_pressed"]
[connection signal="pressed" from="PauseMenu/centercon/vbcon/btnSettings" to="." method="_on_btnSettings_pressed"]
[connection signal="pressed" from="PauseMenu/centercon/vbcon/btnExitMenu" to="." method="_on_btnExitMenu_pressed"]
[connection signal="pressed" from="PauseMenu/centercon/vbcon/btnExitOS" to="." method="_on_btnExitOS_pressed"]
[connection signal="toggled" from="SettingsMenu/centercon/vbcon/vsync/chkbtnVsync" to="." method="_on_chkbtnVsync_toggled"]
[connection signal="toggled" from="SettingsMenu/centercon/vbcon/fullscr/chkbtnFullscr" to="." method="_on_chkbtnFullscr_toggled"]
[connection signal="toggled" from="SettingsMenu/centercon/vbcon/pp/chkbtnPP" to="." method="_on_chkbtnPP_toggled"]
[connection signal="value_changed" from="SettingsMenu/centercon/vbcon/mus/hsldMus" to="." method="_on_hsldMus_value_changed"]
[connection signal="value_changed" from="SettingsMenu/centercon/vbcon/sfx/hsldSfx" to="." method="_on_hsldSfx_value_changed"]
[connection signal="pressed" from="SettingsMenu/centercon/vbcon/actions/btnDone" to="." method="save_settings"]
[connection signal="pressed" from="SettingsMenu/centercon/vbcon/actions/btnDone" to="." method="close_settings_menu"]
[connection signal="pressed" from="SettingsMenu/centercon/vbcon/actions/btnApply" to="." method="apply_settings"]
